// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableHeaderRow should be rendered correctly with extra props 1`] = `
<div
  className="container uui-table-row-container root uui-table-header-row container align-items-center"
  role="row"
>
  <div
    className="fixedColumnsSectionLeft uui-table-fixed-section-left"
    style={
      Object {
        "flex": "0 0 96px",
      }
    }
  >
    <div
      aria-sort="none"
      className="flexCell -clickable"
      onClick={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "96px",
          "flexGrow": 0,
          "flexShrink": undefined,
          "minWidth": "96px",
          "textAlign": undefined,
        }
      }
    >
      <label
        className="container root size-12 theme-light color-sky -clickable"
      >
        <div
          className="uui-checkbox"
        >
          <input
            aria-checked={false}
            checked={false}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </label>
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              ID
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="-draggable"
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="uui-scroll-shadow-right"
    />
  </div>
  <div
    className="container"
    style={
      Object {
        "flex": "1 0 470px",
        "minWidth": "470px",
      }
    }
  >
    <div
      aria-sort="ascending"
      className="flexCell -clickable"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "200px",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": "200px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              name
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="-draggable"
        onMouseDown={[Function]}
      />
    </div>
    <div
      aria-sort="none"
      className="flexCell -clickable"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "150px",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "200px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              Level
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="-draggable"
        onMouseDown={[Function]}
      />
    </div>
    <div
      aria-sort="none"
      className="flexCell -clickable"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
      onPointerUp={[Function]}
      onTouchStart={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "120px",
          "flexGrow": 1,
          "flexShrink": 0,
          "minWidth": "120px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              DATE
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="-draggable"
        onMouseDown={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`DataTableHeaderRow should render with default props 1`] = `
<div
  className="container uui-table-row-container root uui-table-header-row container align-items-center"
  role="row"
>
  <div
    className="fixedColumnsSectionLeft uui-table-fixed-section-left"
    style={
      Object {
        "flex": "0 0 96px",
      }
    }
  >
    <div
      aria-sort="none"
      className="flexCell -clickable"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "96px",
          "flexGrow": 0,
          "flexShrink": undefined,
          "minWidth": "96px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              ID
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="uui-scroll-shadow-right"
    />
  </div>
  <div
    className="container"
    style={
      Object {
        "flex": "1 0 470px",
        "minWidth": "470px",
      }
    }
  >
    <div
      aria-sort="ascending"
      className="flexCell -clickable"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "200px",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": "200px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              name
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-sort="none"
      className="flexCell -clickable"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "150px",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": "200px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              Level
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-sort="none"
      className="flexCell -clickable"
      onClick={[Function]}
      role="columnheader"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "120px",
          "flexGrow": 1,
          "flexShrink": 0,
          "minWidth": "120px",
          "textAlign": undefined,
        }
      }
    >
      <div>
        <div
          className="uui-dummy-wrapper"
        >
          <div
            className="uui-table-header-caption"
          >
            <div
              className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
            >
              DATE
            </div>
            <button
              className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
              href={null}
              onClick={[Function]}
              role="button"
              tabIndex={-1}
            >
              <div
                className="container uui-icon uui-enabled"
                style={Object {}}
              >
                <svg
                  className=""
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
